# maritime-testing

./: .gitignore  CMakeLists.txt  compile.sh  dvl_data_1.txt  flash.sh  prj.conf  send_test.py  test.c  test.py
boards/: blackpill_f401ce.overlay  nucleo_f767zi.overlay  stm32_min_dev_blue.overlay
dvl_data/: dvl_data_2.txt  dvl_data_3.txt
src/: main.c  pressure.c  uart_dvl.c  uart_poll.c
